--- a/vallespasiegos/Backend/index.html
+++ b/vallespasiegos/Backend/index.html
@@ -44,12 +44,7 @@
         <button type="submit">Guardar</button>
       </form>
       <button id="logout-btn" style="margin-top:20px;">Cerrar sesión</button>
-      <h2>Chat</h2>
-      <ul id="mensajes"></ul>
-      <form id="formulario-chat">
-        <input id="input-mensaje" autocomplete="off" placeholder="Escribe tu mensaje..." required />
-        <button>Enviar</button>
-      </form>
+      <button onclick="window.location.href='chat.html'" style="margin-top:10px;">Ir al chat en tiempo real</button>
     </div>
   </div>
   <script src="/socket.io/socket.io.js"></script>
